--- a/brake-actuator.ioc
+++ b/brake-actuator.ioc
@@ -10,33 +10,28 @@ Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=TIM2
-Mcu.IP4=TIM3
-Mcu.IP5=TIM4
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP3=USART2
+Mcu.IPNb=4
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA2
-Mcu.Pin11=PA3
-Mcu.Pin12=PA5
+Mcu.Pin10=PA3
+Mcu.Pin11=PA5
+Mcu.Pin12=PB0
 Mcu.Pin13=PA13
 Mcu.Pin14=PA14
 Mcu.Pin15=PB3
-Mcu.Pin16=PB6
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin16=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
-Mcu.Pin8=PA0-WKUP
-Mcu.Pin9=PA1
-Mcu.PinsNb=19
+Mcu.Pin8=PC3
+Mcu.Pin9=PA2
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -52,12 +47,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
-NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-PA0-WKUP.Signal=S_TIM2_CH1_ETR
-PA1.Signal=S_TIM2_CH2
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -82,13 +72,17 @@ PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=LD2 [Green Led]
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=ActuatorSleep
+PB0.Locked=true
+PB0.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
-PB6.Signal=S_TIM4_CH1
-PC0.GPIOParameters=GPIO_Label
+PC0.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC0.GPIO_Label=ActuatorEnable
+PC0.GPIO_PuPd=GPIO_NOPULL
 PC0.Locked=true
 PC0.Signal=GPIO_Output
 PC1.GPIOParameters=GPIO_Label
@@ -110,6 +104,11 @@ PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=ActuatorDir
 PC2.Locked=true
 PC2.Signal=GPIO_Output
+PC3.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC3.GPIO_Label=ActuatorReset
+PC3.GPIO_PuPd=GPIO_NOPULL
+PC3.Locked=true
+PC3.Signal=GPIO_Output
 PH0-OSC_IN.Locked=true
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
@@ -147,7 +146,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -199,27 +198,9 @@ RCC.VCOSAIOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
-SH.S_TIM2_CH1_ETR.ConfNb=1
-SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
-SH.S_TIM2_CH2.ConfNb=1
-SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
-SH.S_TIM4_CH1.ConfNb=1
-TIM2.EncoderMode=TIM_ENCODERMODE_TI12
-TIM2.IPParameters=EncoderMode
-TIM3.IPParameters=Prescaler,Period
-TIM3.Period=60000-1
-TIM3.Prescaler=84-1
-TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM4.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1
-TIM4.Period=600-1
-TIM4.Prescaler=84-1
-TIM4.Pulse-PWM\ Generation1\ CH1=300
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM3_VS_ClockSourceINT.Mode=Internal
-VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=NUCLEO-F446RE
 boardIOC=true
