fix: set pin status to extend and retract actuator

--- a/brake-actuator.ioc
+++ b/brake-actuator.ioc
@@ -85,8 +85,9 @@ PC0.GPIO_Label=ActuatorEnable
 PC0.GPIO_PuPd=GPIO_NOPULL
 PC0.Locked=true
 PC0.Signal=GPIO_Output
-PC1.GPIOParameters=GPIO_Label
+PC1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC1.GPIO_Label=ActuatorStep
+PC1.GPIO_PuPd=GPIO_NOPULL
 PC1.Locked=true
 PC1.Signal=GPIO_Output
 PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
@@ -100,8 +101,9 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC2.GPIOParameters=GPIO_Label
+PC2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC2.GPIO_Label=ActuatorDir
+PC2.GPIO_PuPd=GPIO_NOPULL
 PC2.Locked=true
 PC2.Signal=GPIO_Output
 PC3.GPIOParameters=GPIO_PuPd,GPIO_Label
