--- a/brake-actuator.ioc
+++ b/brake-actuator.ioc
@@ -10,19 +10,22 @@ Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=USART2
-Mcu.IPNb=4
+Mcu.IP3=TIM2
+Mcu.IP4=USART2
+Mcu.IPNb=5
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA3
-Mcu.Pin11=PA5
-Mcu.Pin12=PB0
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=PB3
-Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin10=PA1
+Mcu.Pin11=PA2
+Mcu.Pin12=PA3
+Mcu.Pin13=PA5
+Mcu.Pin14=PB0
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=PB3
+Mcu.Pin18=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
@@ -30,8 +33,8 @@ Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
-Mcu.Pin9=PA2
-Mcu.PinsNb=17
+Mcu.Pin9=PA0-WKUP
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -47,7 +50,10 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA0-WKUP.Signal=S_TIM2_CH1_ETR
+PA1.Signal=S_TIM2_CH2
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -200,6 +206,13 @@ RCC.VCOSAIOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
+SH.S_TIM2_CH2.ConfNb=1
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.EncoderMode=TIM_ENCODERMODE_TI12
+TIM2.IPParameters=AutoReloadPreload,EncoderMode
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
